messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: django-messaging
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging
        version: blue
    spec:
      containers:
        - name: django-container
          image: my-django-messaging:1.0   # 👈 Stable version
          ports:
            - containerPort: 8000
